# kp-pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  action.yml  branch-naming.sh  chart-values-json-schema-validation.py  check-commit-msg-length.sh  fastapi-generate-openapi-specification.sh  fastapi_generate_openapi_specification.py  git-branch-linearity.sh  gitops-values-validation.py  kafka-check-local-schemas.sh  no-ephemeral-links.sh  pyproject.toml  shell.nix
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bump-version.yml  test.yml
kafka/: check-local-schemas.sh
kafka/generators/: Avro4sSchemaGenerator.tmpl.scala  VulcanSchemaGenerator.tmpl.scala
kp_pre_commit_hooks/: gitops-values-validation.py  gitops_values_validation.py  kong-values-validation.py  terraform_repo_compliance.py
tests/: conftest.py  test_git_branch_linearity.sh  test_gitops_service_validation.py  test_gitops_values_validation.py
tests/test_data/gitops_data/app1/service1/: Chart-dev.yaml  Chart.yaml  values-dev-hyphenated-suffix.yaml  values-dev-topic_with_authorized_max_local_topic_bytes.yaml  values-dev-topic_with_max_local_topic_bytes_above_authorized_value.yaml  values-dev-topic_with_no_max_local_topic_bytes_set.yaml  values-dev-topic_with_unauthorized_max_local_topic_bytes.yaml  values-dev-versioned-topic.yaml  values-prod-topic_with_authorized_max_local_topic_bytes_not_on_current_env.yaml
tests/test_data/gitops_data/app1/service2/: Chart.yaml  values-dev-topic_kafka_streams_changelog.yaml  values-dev-topic_kafka_streams_repartition.yaml  (+1 more)
(+7 files in other folders)
